--- a/resources/frontend/css/style.css
+++ b/resources/frontend/css/style.css
@@ -898,7 +898,8 @@ i.icon1 {
 	font-size: 14px;
 	font-weight: 500;
 	background: #f55d2c;
-    padding: 25px 30px;
+    padding: 10px 15px ;
+    margin-right: 10px;
 	text-align: center;
 }
 
